引入 PJTS 主题，CI 中自动更新预览包

--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -24,6 +24,9 @@ jobs:
       - name: 安装依赖
         run: pnpm install
 
+      - name: 更新主题包
+        run: pnpm update @project-trans/vitepress-theme-project-trans@prerelease
+
       # 第四步：构建项目
       - name: 构建项目
         run: pnpm run docs:build # 构建 VitePress 项目
