--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "devDependencies": {
     "vitepress": "^1.3.4"
   },
@@ -6,5 +7,8 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
+  },
+  "dependencies": {
+    "@project-trans/vitepress-theme-project-trans": "^0.4.1727360260"
   }
 }
