--- a/package.json
+++ b/package.json
@@ -1,14 +1,38 @@
 {
+  "name": "Lee's blog",
   "type": "module",
-  "devDependencies": {
-    "vitepress": "^1.3.4"
-  },
+  "version": "1.0.0",
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
+  "description": "偶尔的废话和些许经验",
+  "license": "CC-BY-SA-4.0",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "dev": "vitepress dev docs",
+    "dev:wrangler": "wrangler pages dev ./docs/.vitepress/dist/",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs",
+    "update-package": "pnpm dlx vp-update"
   },
-  "dependencies": {
-    "@project-trans/vitepress-theme-project-trans": "^0.4.1727360260"
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.21.1",
+    "@cloudflare/workers-types": "^4.20240620.0",
+    "@iconify-json/carbon": "^1.2.1",
+    "@iconify-json/icon-park-outline": "^1.2.0",
+    "@iconify-json/octicon": "^1.2.0",
+    "@project-trans/suggestion-box": "^0.0.9",
+    "@project-trans/vitepress-theme-project-trans": "^0.3.1726924363",
+    "@unocss/eslint-plugin": "^0.59.4",
+    "eslint": "^8.57.0",
+    "eslint-plugin-format": "^0.1.2",
+    "unocss": "^0.62.4",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.3.1",
+    "vitepress": "^1.2.3",
+    "vue": "^3.4.30"
+  },
+  "pnpm": {
+    "overrides": {
+      "hasown": "npm:@nolyfill/hasown@^1",
+      "is-core-module": "npm:@nolyfill/is-core-module@^1"
+    }
   }
 }
