--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -29,7 +29,7 @@ jobs:
 
       # 第四步：构建项目
       - name: 构建项目
-        run: pnpm run docs:build # 构建 VitePress 项目
+        run: pnpm run build # 构建 VitePress 项目
 
       # 第五步：安装 Wrangler
       - name: 安装 Wrangler
