--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -13,6 +13,8 @@ jobs:
       # 第一步：检出代码
       - name: 检出代码
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       # 第二步：安装 pnpm
       - name: 安装 pnpm
