优化 CI 工作流

--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - 'main' # 当推送到 main 分支时触发
+    paths:
+      - 'docs/**'
+      - '.github/workflows/cf.yml'
+      - 'package.json'
 
 jobs:
   deploy:
