--- a/.github/workflows/auto-review.yml
+++ b/.github/workflows/auto-review.yml
@@ -1,8 +1,8 @@
 name: 自动批准 PR
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, labeled]
+  pull_request_target:
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
   auto-approve-and-merge:
