--- a/.github/workflows/img.yml
+++ b/.github/workflows/img.yml
@@ -56,6 +56,6 @@ jobs:
           body: ${{ steps.calibre.outputs.markdown }}
       - name: Add label to PR
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         run: |
           gh pr edit ${{ github.event.pull_request.number }} --add-label "Actions"
