--- a/.github/workflows/img.yml
+++ b/.github/workflows/img.yml
@@ -57,5 +57,8 @@ jobs:
       - name: Add label to PR
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
+        if: |
+          github.event_name != 'pull_request' &&
+          steps.calibre.outputs.markdown != ''
         run: |
           gh pr edit ${{ github.event.pull_request.number }} --add-label "Actions"
