--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -24,7 +24,7 @@ jobs:
       - name: 安装 pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: latest
+          version: 9.12.3
 
       # 第三步：安装依赖
       - name: 安装依赖
