--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -37,15 +37,18 @@ jobs:
       - name: 构建项目
         run: pnpm run build # 构建 VitePress 项目
 
-      # 第五步：安装 Wrangler
-      - name: 安装 Wrangler
-        run: pnpm add -g wrangler@3 # 安装 Wrangler v3
-
-      # 第六步：发布到 Cloudflare Pages
-      - name: 发布到 Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+      - name: Deploy
+        uses: cloudflare/wrangler-action@v3
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_PAGES_TOKEN }} # Cloudflare Pages API Token
-          accountId: ${{ secrets.CLOUDFLARE_PAGES_ACCOUNT }} # Cloudflare 账户 ID
-          projectName: blog # Cloudflare Pages 项目名称
-          directory: docs/.vitepress/dist # 构建输出目录
+          apiToken: ${{ secrets.CLOUDFLARE_PAGES_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_PAGES_ACCOUNT }}
+          command: pages deploy docs/.vitepress/dist --project-name=blog
+
+      # # 第六步：发布到 Cloudflare Pages
+      # - name: 发布到 Cloudflare Pages
+      #   uses: cloudflare/pages-action@v1
+      #   with:
+      #     apiToken: ${{ secrets.CLOUDFLARE_PAGES_TOKEN }} # Cloudflare Pages API Token
+      #     accountId: ${{ secrets.CLOUDFLARE_PAGES_ACCOUNT }} # Cloudflare 账户 ID
+      #     projectName: blog # Cloudflare Pages 项目名称
+      #     directory: docs/.vitepress/dist # 构建输出目录
