--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -45,8 +45,13 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_PAGES_ACCOUNT }}
           command: pages deploy docs/.vitepress/dist --project-name=blog
 
-      - name: 测试打印URL
-        run: echo ${{ steps.deploy.outputs.url }}
+      - name: 使用 wrangler 命令输出
+        env:
+          CMD_OUTPUT: ${{ steps.deploy.outputs.command-output }}
+        run: echo $CMD_OUTPUT
+
+      - name: 单独输出预览URL
+        run: echo ${{ steps.deploy.outputs.deployment-url }}
 
       # # 第六步：发布到 Cloudflare Pages
       # - name: 发布到 Cloudflare Pages
