--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -62,8 +62,6 @@ jobs:
               /repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
               | jq -r '.[].filename')  # 使用 -r 获取原始文本输出
 
-            base_url="https://rle.wiki/"
-
             # 处理文件路径，拼接成完整的 URL
             for file in $files; do
               # 去掉路径前的 "docs/" 和后缀 ".md"
@@ -71,7 +69,7 @@ jobs:
               modified_file="${modified_file%.md}"  # 删除路径后面的 ".md"
 
               # 拼接 URL
-              file_url="${base_url}${modified_file}"
+              file_url="${{ steps.deploy.outputs.deployment-url }}${modified_file}"
 
               # 输出每个文件的完整 URL
               echo "File URL: ${file_url}"
