--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -76,8 +76,8 @@ jobs:
                 all_file_urls="${all_file_urls}\n${file_url}"
               fi
             done
-            echo "::set-output name=all_file_urls::$all_file_urls"
-            echo -e "All File URLs: $all_file_urls"
+            echo "{all_file_urls}={all_file_urls}" >> $GITHUB_OUTPUT
+            # echo -e "All File URLs: $all_file_urls"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
