--- a/.github/workflows/preview-pr-build.yaml
+++ b/.github/workflows/preview-pr-build.yaml
@@ -77,7 +77,7 @@ jobs:
               fi
             done
             echo "{all_file_urls}={all_file_urls}" >> $GITHUB_OUTPUT
-            # echo -e "All File URLs: $all_file_urls"
+            echo -e "All File URLs: $all_file_urls"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
