--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.1",
     "@cloudflare/workers-types": "^4.20240620.0",
+    "@eslint/js": "^9.17.0",
     "@iconify-json/carbon": "^1.2.1",
     "@iconify-json/icon-park-outline": "^1.2.0",
     "@iconify-json/octicon": "^1.2.0",
     "@project-trans/suggestion-box": "^0.0.9",
     "@project-trans/vitepress-theme-project-trans": "^0.4.1729767862",
     "@unocss/eslint-plugin": "^0.59.4",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-format": "^0.1.2",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.18.2",
     "unocss": "^0.62.4",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.3.1",
