--- a/crowdin.yml
+++ b/crowdin.yml
@@ -5,3 +5,5 @@ files:
     translation: /docs/%two_letters_code%/friendly/%original_file_name%
   - source: /docs/life/*.md
     translation: /docs/%two_letters_code%/life/%original_file_name%
+  - source: /docs/*.md
+    translation: /docs/%two_letters_code%/%original_file_name%
