--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,9 +1,9 @@
 files:
-  - source: /docs/about/*.md
+  - source: /docs/about/**/*.md
     translation: /docs/%two_letters_code%/about/%original_file_name%
-  - source: /docs/friendly/*.md
+  - source: /docs/friendly/**/*.md
     translation: /docs/%two_letters_code%/friendly/%original_file_name%
-  - source: /docs/life/*.md
+  - source: /docs/life/**/*.md
     translation: /docs/%two_letters_code%/life/%original_file_name%
   - source: /docs/*.md
     translation: /docs/%two_letters_code%/%original_file_name%
