--- a/crowdin.yml
+++ b/crowdin.yml
@@ -9,3 +9,5 @@ files:
     translation: /docs/%two_letters_code%/%original_file_name%
   - source: /docs/tips/**/*.md
     translation: /docs/%two_letters_code%/tips/**/%original_file_name%
+  - source: /README.md
+    translation: /%file_name%_%two_letters_code%.md
