--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,7 +4,7 @@ files:
   - source: /docs/friendly/**/*.md
     translation: /docs/%two_letters_code%/friendly/%original_file_name%
   - source: /docs/life/**/*.md
-    translation: /docs/%two_letters_code%/life/%original_file_name%
+    translation: /docs/%two_letters_code%/life/**/%original_file_name%
   - source: /docs/*.md
     translation: /docs/%two_letters_code%/%original_file_name%
   - source: /docs/tips/**/*.md
