ci: 添加 rsync 部署参数以优化文件传输

--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -36,8 +36,9 @@ jobs:
       - name: Deploy to Server via SSH rsync
         uses: easingthemes/ssh-deploy@v5.1.0
         with:
+          ARGS: "-avz --delete --progress"
           REMOTE_HOST: ${{ secrets.SSH_HOST }}
           REMOTE_USER: ${{ secrets.SSH_USER }}
           SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-          SOURCE: "docs/.vitepress/dist/*"
+          SOURCE: "docs/.vitepress/dist/"
           TARGET: "/var/www/blog/"
