--- a/.github/workflows/deploy-to-server-and-s3.yml
+++ b/.github/workflows/deploy-to-server-and-s3.yml
@@ -1,18 +1,18 @@
 name: Deploy to server and S3
 
 on:
-  push:
-    branches:
-      - 'main'
-    paths:
-      - 'docs/**'
-      - '.github/workflows/cf.yml'
-      - '.github/workflows/deploy-to-server.yml'
-      - '.github/workflows/deploy-to-server-and-s3.yml'
-      - 'package.json'
-  workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * 1'
+  # push:
+  #   branches:
+  #     - 'main'
+  #   paths:
+  #     - 'docs/**'
+  #     - '.github/workflows/cf.yml'
+  #     - '.github/workflows/deploy-to-server.yml'
+  #     - '.github/workflows/deploy-to-server-and-s3.yml'
+  #     - 'package.json'
+  # workflow_dispatch:
+  # schedule:
+  #   - cron: '0 0 * * 1'
 
 jobs:
   s3-sync:
